--- a/src/app/Components/allproducts/allproducts.component.scss
+++ b/src/app/Components/allproducts/allproducts.component.scss
@@ -53,8 +53,12 @@ a {
     padding: 0px;
 }
 
+.col-sm-12, .col-md-6, .col-lg-3 {
+    padding: 0px;
+}
+
 .card {
-    height: 350px;
+    height: 380px;
     margin: 20px;
     border: 1px solid #4A3DB5;
 }
@@ -112,6 +116,8 @@ a.btn.btn-light:hover {
     width: 45px;
     margin: 5px;
     border-color: #000000;
+    background: #FFFFFF;
+    color: #4A3DB5;
 }
 
 .btn-secondary:hover {
