--- a/src/app/Components/profile/profile.component.scss
+++ b/src/app/Components/profile/profile.component.scss
@@ -27,6 +27,11 @@
     color: #4A3DB5;
 }
 
+.AddressHeadings {
+    color: #C97F1A;
+    font-weight: bold;
+}
+
 .TableHeader {
     color: #000000;
 }
