--- a/src/app/Components/productdetails/productdetails.component.scss
+++ b/src/app/Components/productdetails/productdetails.component.scss
@@ -54,6 +54,7 @@ a.btn.btn-light:hover {
     margin-bottom: 10px;
     margin-right: 10px;
     margin-left: 0px;
+    border: 2px solid #4A3DB5;
 }
 
 .btn-light:hover {
@@ -76,6 +77,7 @@ a.btn.btn-light1:hover {
 
 .btn-light1 {
     background:#FCA912;
+    border: 2px solid #FCA912;
     color: #FFFFFF;
     margin-top: 10px;
     margin-bottom: 10px;
