--- a/src/app/Components/profile/profile.component.html
+++ b/src/app/Components/profile/profile.component.html
@@ -175,7 +175,7 @@
                     <label for="email">Email</label>
                 </div>
                 <span id="email_error" class="Error"></span>
-                <!-- <div class="form-group">
+                <div class="form-group">
                     <input type="file" name="image" (change)="fileProgress($event)" />
                 </div>
                 <div class="image-preview mb-3" *ngIf="previewUrl">
@@ -183,7 +183,7 @@
                 </div>
                 <div class="mb-3" *ngIf="uploadedFilePath">
                     {{uploadedFilePath}}
-                </div> -->
+                </div>
                 <p class="formButtons">
                     <a class="btn btn-light" (click)="save('Profile')">
                         Update <span class="glyphicon glyphicon-floppy-save"></span>
