--- a/src/app/Components/add-address/add-address.component.scss
+++ b/src/app/Components/add-address/add-address.component.scss
@@ -20,6 +20,7 @@
 
 .list-group-item:hover {
     border: 5px solid #000000;
+    cursor: pointer;
 }
 
 .list-group-flush:last-child .list-group-item:last-child {
