show-hide password

--- a/src/app/Components/forgotpassword/forgotpassword.component.html
+++ b/src/app/Components/forgotpassword/forgotpassword.component.html
@@ -37,15 +37,18 @@
         <span id="code_error" class="Error"></span>
 
         <div class="field">
-            <i class="fa fa-key icon"></i>
-            <input type="password" name="newpassword" id="newpassword" placeholder="New Password" maxlength="12">
+            <i class="fa fa-eye icon1" *ngIf="passwordType1 == 'text'" (click)="togglePasswordType1()"></i>
+            <i class="fa fa-eye-slash icon1" *ngIf="passwordType1 == 'password'" (click)="togglePasswordType1()"></i>
+            <input type="{{passwordType1}}" name="newpassword" id="newpassword" placeholder="New Password"
+                maxlength="12">
             <label for="newpassword">New Password</label>
         </div>
         <span id="newpassword_error" class="Error"></span>
 
         <div class="field">
-            <i class="fa fa-key icon"></i>
-            <input type="password" name="confirmpassword" id="confirmpassword" placeholder="Confirm Password"
+            <i class="fa fa-eye icon1" *ngIf="passwordType2 == 'text'" (click)="togglePasswordType2()"></i>
+            <i class="fa fa-eye-slash icon1" *ngIf="passwordType2 == 'password'" (click)="togglePasswordType2()"></i>
+            <input type="{{passwordType2}}" name="confirmpassword" id="confirmpassword" placeholder="Confirm Password"
                 maxlength="12">
             <label for="confirmpassword">Confirm Password</label>
         </div>
