--- a/src/app/Components/forgotpassword/forgotpassword.component.scss
+++ b/src/app/Components/forgotpassword/forgotpassword.component.scss
@@ -67,11 +67,29 @@
     text-decoration: none;
 }
 
+.fa.fa-eye.icon1 {
+    cursor: pointer;
+}
+
+.fa.fa-eye-slash.icon1 {
+    cursor: pointer;
+}
+
 .fa:hover {
     opacity: 0.7;
 }
 
 .icon {
+    padding: 10px;
+    min-width: 40px;
+    margin-inline-start: 90%;
+    margin-top: -44px;
+    z-index: 1000;
+    font-size: 24px;
+    color: #4A3DB5;
+}
+
+.icon1 {
     padding: 10px;
     min-width: 40px;
     margin-inline-start: 90%;
