--- a/src/app/Components/login/login.component.scss
+++ b/src/app/Components/login/login.component.scss
@@ -74,6 +74,24 @@
     color: #4A3DB5;
 }
 
+.icon1 {
+    padding: 10px;
+    min-width: 40px;
+    margin-inline-start: 90%;
+    margin-top: -44px;
+    z-index: 1000;
+    font-size: 24px;
+    color: #4A3DB5;
+}
+
+.fa.fa-eye.icon1 {
+    cursor: pointer;
+}
+
+.fa.fa-eye-slash.icon1 {
+    cursor: pointer;
+}
+
 .input-icons {
     width: 100%;
     margin-bottom: 10px;
