--- a/src/app/Components/navigationbar/navigationbar.component.html
+++ b/src/app/Components/navigationbar/navigationbar.component.html
@@ -15,8 +15,9 @@
     </div>
 
     <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" routerLink="cart" routerLinkActive="Active"
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit"
+            (click)="openSearchProductList()">Click to Search Product</button>
+        &nbsp;<button class="btn btn-outline-success my-2 my-sm-0" type="submit" routerLink="cart" routerLinkActive="Active"
             (click)="goToCart()">
             <span class="glyphicon glyphicon-shopping-cart"></span>
             <span class="badge">{{cartCount}}</span>
