--- a/src/app/Components/allproducts/allproducts.component.html
+++ b/src/app/Components/allproducts/allproducts.component.html
@@ -2,7 +2,8 @@
 
     <div class="col-md-2 mt-md-0 socialbutton">
         <p>
-            <a class="btn btn-info btn-lg" (click)="getAllProducts()">
+            <a class="btn btn-info btn-lg" (click)="getAllProducts()" routerLink="/allproducts"
+                routerLinkActive="Active">
                 &nbsp;&nbsp;All Products&nbsp;&nbsp;
             </a>
         </p>
@@ -43,8 +44,7 @@
                     Sort By:
                 </div>
                 <div class="col-md-2">
-                    <button type="button" class="btn btn-secondary"
-                        (click)="setProductRating('product_rating', true)">
+                    <button type="button" class="btn btn-secondary" (click)="setProductRating('product_rating', true)">
                         <span class="glyphicon glyphicon-star"></span>
                     </button>
                 </div>
