--- a/src/app/Components/profile/profile.component.html
+++ b/src/app/Components/profile/profile.component.html
@@ -159,7 +159,7 @@
                 <div class="field">
                     <i class="fa fa-calendar icon" (click)="d.toggle()"></i>
                     <input placeholder="yyyy-mm-dd" name="dob" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker"
-                        (dateSelect)="dateSelection($event)">
+                        (dateSelect)="dateSelection($event)" [maxDate]="{year: maxYear, month: maxMonth, day: maxDay}">
                     <label for="dob" class="dob">Date of Birth</label>
                 </div>
                 <span id="dob_error" class="Error"></span>
