--- a/src/app/Components/footersection/footersection.component.html
+++ b/src/app/Components/footersection/footersection.component.html
@@ -22,7 +22,7 @@
                 </p>
                 <p class="AboutCompany1">
                     <a class="nav-link" href="#" (click)="openPDF1()">
-                        Gurantee and Return Policy
+                        Guarantee and Return Policy
                     </a>
                 </p>
                 <p class="AboutCompany1">
