--- a/src/app/Components/navigationbar/navigationbar.component.html
+++ b/src/app/Components/navigationbar/navigationbar.component.html
@@ -15,10 +15,10 @@
     </div>
 
     <form class="form-inline my-2 my-lg-0">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit"
-            (click)="openSearchProductList()">Click to Search Product</button>
-        &nbsp;<button class="btn btn-outline-success my-2 my-sm-0" type="submit" routerLink="cart" routerLinkActive="Active"
-            (click)="goToCart()">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="openSearchProductList()">Click to
+            Search Product</button>
+        &nbsp;<button class="btn btn-outline-success my-2 my-sm-0" type="submit" routerLink="cart"
+            routerLinkActive="Active" (click)="goToCart()">
             <span class="glyphicon glyphicon-shopping-cart"></span>
             <span class="badge">{{cartCount}}</span>
         </button>
